# digest

./: .env.example  .gitignore  README.md  analysis.py  app.py  collect_data.py  evaluate_data.py  index.html  justfile  main.py  pyproject.toml  send_email.py
sources/: base.toml
sources/arxiv/: arxiv.py  config.toml
sources/freshrss/: config.toml  fever.py
sources/github-feed/: config.toml  github_feed.py
sources/manifold-comment/: comments.py  config.toml
sources/manifund/: config.toml  manifund.py
sources/manifund-projects/: config.toml  manifund-projects.py
sources/producthunt/: config.toml  producthunt.py
templates/: analysis.html  home.html  index.html  results.html
utils/: __init__.py  analysis.py  common.py  config.py  eval.py
