[project]
name = "digest"
version = "0.1.0"
description = "A tool for extracting the signal from the noise."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "toml",
    "requests",
    "numpy>=2.3.1",
    "matplotlib>=3.10.3",
    "flask>=3.0.0",
    "beautifulsoup4>=4.13.4",
    "readability-lxml>=0.8.4.1",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "tiptapy>=0.21.0",
]
